# Coding-Lab1---Team04

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake  files.cmake  ut_all  ut_all[1]_include.cmake  ut_all[1]_tests.cmake
include/: Color.h  ElectiveSubject.h  RequiredSubject.h  ScoreSystem.h  Subject.h  TablePrinter.h
scripts/: coverage.sh
src/: main.cpp
